--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
     "webpack",
     "typescript",
     "babel",
-    "sass",
-    "hmr",
-    "starter",
-    "boilerplate"
+    "konva"
   ],
   "author": "Piotr Praga",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vikpe/react-webpack-typescript-starter.git"
+    "url": "git@github.com:praghus/plextus.git"
   },
   "bugs": {
-    "url": "https://github.com/vikpe/react-webpack-typescript-starter/issues"
+    "url": "https://github.com/praghus/plextus/issues"
   },
-  "homepage": "https://github.com/vikpe/react-webpack-typescript-starter",
+  "homepage": "https://github.com/praghus/plextus",
   "scripts": {
     "build": "yarn run clean-dist && webpack --config=config/webpack/prod.js",
     "clean-dist": "rimraf dist/*",
@@ -58,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "babel-loader": "^8.2.2",
+    "buffer": "^6.0.3",
     "css-loader": "^5.2.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -78,16 +76,18 @@
     "eslint-plugin-react-redux": "^3.3.2",
     "eslint-plugin-redux-saga": "^1.2.1",
     "eslint-plugin-testing-library": "^4.6.0",
+    "events": "^3.3.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
     "jest": "^27.0.5",
     "node-sass": "^6.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
+    "react-dom": "npm:@hot-loader/react-dom",
     "rimraf": "^3.0.2",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
@@ -106,18 +106,23 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@reduxjs/toolkit": "^1.5.1",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
     "connected-react-router": "^6.9.1",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
+    "file-saver": "^2.0.5",
     "history": "5.0.0",
     "i18next": "^20.3.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "import": "^0.0.6",
+    "jszip": "^3.6.0",
     "konva": "8.0.1",
     "localforage": "^1.9.0",
     "react-colorful": "^5.2.0",
     "react-favicon": "^0.0.22",
     "react-helmet": "^6.1.0",
+    "react-hot-loader": "^4.13.0",
     "react-i18next": "^11.11.0",
     "react-konva": "17.0.2-3",
     "react-redux": "^7.2.4",
@@ -129,7 +134,14 @@
     "redux-undo-redo": "^2.1.1",
     "reselect": "^4.0.0",
     "sanitize.css": "^12.0.1",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
+    "tmx-tiledmap": "^1.2.1",
+    "use-image": "^1.0.7",
+    "util": "^0.12.4",
     "uuid": "^8.3.2",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "xmlbuilder2": "^2.4.1",
+    "zlib": "1.0.5"
   }
 }
