--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "jszip": "^3.6.0",
     "konva": "8.0.1",
     "localforage": "^1.9.0",
+    "pako": "^2.0.3",
     "react-colorful": "^5.2.0",
     "react-favicon": "^0.0.22",
     "react-helmet": "^6.1.0",
@@ -131,7 +132,6 @@
     "react-spinners": "^0.11.0",
     "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
-    "redux-undo-redo": "^2.1.1",
     "reselect": "^4.0.0",
     "sanitize.css": "^12.0.1",
     "stream-browserify": "^3.0.0",
