--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "jszip": "^3.6.0",
     "konva": "8.0.1",
     "localforage": "^1.9.0",
+    "material-ui-color": "^1.2.0",
     "pako": "^2.0.3",
     "react-colorful": "^5.2.0",
     "react-favicon": "^0.0.22",
