--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
     - '12'
+    
 cache:
     yarn: true
     directories:
-        - public
+        - dist
         - .cache
 script:
     - yarn build
