--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "webpack",
     "typescript",
     "babel",
-    "konva"
+    "konva",
+    "pixel",
+    "pixelart",
+    "tiled",
+    "tmx"
   ],
   "author": "Piotr Praga",
   "license": "MIT",
@@ -50,7 +54,6 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-helmet": "^6.1.1",
-    "@types/react-router-dom": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -121,13 +124,10 @@
     "pako": "^2.0.3",
     "react-colorful": "^5.2.0",
     "react-favicon": "^0.0.22",
-    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
     "react-i18next": "^11.11.0",
     "react-konva": "17.0.2-3",
     "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "react-spinners": "^0.11.0",
     "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
