--- a/package.json
+++ b/package.json
@@ -45,102 +45,100 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@emotion/babel-plugin": "^11.3.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.170",
-    "@types/node": "^15.6.1",
+    "@types/node": "^16.11.7",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-helmet": "^6.1.1",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "babel-loader": "^8.2.2",
     "buffer": "^6.0.3",
-    "css-loader": "^5.2.5",
+    "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^7.27.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsdoc": "^35.4.0",
+    "eslint-plugin-jest": "^25.2.4",
+    "eslint-plugin-jsdoc": "^37.0.3",
     "eslint-plugin-lodash": "^7.2.0",
     "eslint-plugin-new-with-error": "^2.0.0",
     "eslint-plugin-perf-standard": "^1.0.3",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-redux": "^3.3.2",
     "eslint-plugin-redux-saga": "^1.2.1",
-    "eslint-plugin-testing-library": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.0.0",
     "events": "^3.3.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "image-webpack-loader": "^7.0.1",
+    "image-webpack-loader": "^8.0.1",
     "jest": "^27.0.5",
-    "node-sass": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "process": "^0.11.10",
-    "react": "^17.0.2",
-    "react-dom": "npm:@hot-loader/react-dom",
     "rimraf": "^3.0.2",
-    "sass-loader": "^11.1.1",
-    "style-loader": "^2.0.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.2.4",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.14.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.11.4",
+    "@babel/runtime": "^7.16.3",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@reduxjs/toolkit": "^1.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.6.2",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "file-saver": "^2.0.5",
-    "i18next": "^20.3.2",
+    "i18next": "^21.5.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "import": "^0.0.6",
     "jszip": "^3.6.0",
-    "konva": "8.0.1",
+    "konva": "8.3.0",
     "localforage": "^1.9.0",
     "material-ui-color": "^1.2.0",
     "pako": "^2.0.3",
+    "react": "^17.0.2",
     "react-colorful": "^5.2.0",
-    "react-favicon": "^0.0.22",
+    "react-dom": "^17.0.2",
+    "react-favicon": "^0.0.25",
     "react-hot-loader": "^4.13.0",
     "react-i18next": "^11.11.0",
-    "react-konva": "17.0.2-3",
-    "react-redux": "^7.2.4",
+    "react-konva": "17.0.2-5",
+    "react-redux": "^7.2.6",
     "react-spinners": "^0.11.0",
     "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
-    "sanitize.css": "^12.0.1",
+    "reselect": "^4.1.4",
+    "sanitize.css": "12.0.1",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
-    "tmx-tiledmap": "^1.2.1",
     "use-image": "^1.0.7",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.6.2",
-    "xmlbuilder2": "^2.4.1",
+    "xmlbuilder2": "^3.0.2",
     "zlib": "1.0.5"
   }
 }
