--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "image-webpack-loader": "^7.0.1",
+    "image-webpack-loader": "^8.0.1",
     "jest": "^27.0.5",
+    "mozjpeg": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "process": "^0.11.10",
