--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "browserify-zlib": "^0.2.0",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "file-saver": "^2.0.5",
     "i18next": "^21.5.2",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -127,6 +128,7 @@
     "react-konva": "17.0.2-5",
     "react-redux": "^7.2.6",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.1.0",
     "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.4",
