Migrate to MUI v5 (#28)

--- a/package.json
+++ b/package.json
@@ -102,9 +102,9 @@
     "@babel/runtime": "^7.16.3",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
     "@reduxjs/toolkit": "^1.6.2",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
@@ -118,7 +118,7 @@
     "jszip": "^3.6.0",
     "konva": "8.3.0",
     "localforage": "^1.9.0",
-    "material-ui-color": "^1.2.0",
+    "mui-color": "^2.0.0-beta.2",
     "pako": "^2.0.3",
     "react": "^17.0.2",
     "react-colorful": "^5.2.0",
