--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "babel-loader": "^8.2.2",
     "buffer": "^6.0.3",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -138,6 +139,7 @@
     "use-image": "^1.0.7",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
+    "wasm-imagemagick": "^1.2.8",
     "whatwg-fetch": "^3.6.2",
     "xmlbuilder2": "^3.0.2",
     "zlib": "1.0.5"
