--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-helmet": "^6.1.1",
+    "@types/uuid": "^8.3.4",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
