--- a/src/assets/projects/demo-project.json
+++ b/src/assets/projects/demo-project.json
@@ -13,6 +13,7 @@
             "name": "CybernoidII-TheRevenge-Level4"
         }
     ],
+    "name": "Cybernoid II - TheRevenge - Level 4",
     "palette": [
         [0, 0, 0],
         [92, 69, 0],
