--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
         "@types/enzyme": "^3.10.8",
         "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/file-saver": "^2.0.5",
         "@types/history": "^4.7.8",
         "@types/jest": "^27.0.2",
         "@types/lodash": "^4.14.170",
         "@types/node": "^16.11.7",
+        "@types/pako": "^2.0.0",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/react-helmet": "^6.1.1",
