--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
         "i18next-browser-languagedetector": "^6.1.2",
         "import": "^0.0.6",
         "jszip": "^3.6.0",
-        "konva": "8.3.0",
+        "konva": "8.3.14",
         "localforage": "^1.9.0",
         "mui-color": "^2.0.0-beta.2",
         "pako": "^2.0.3",
@@ -129,7 +129,7 @@
         "react-colorful": "^5.2.0",
         "react-dom": "^18.0.0",
         "react-i18next": "^11.16.7",
-        "react-konva": "^18.0.0-0",
+        "react-konva": "18.2.3",
         "react-redux": "^8.0.1",
         "react-spinners": "^0.11.0",
         "react-toastify": "^8.1.0",
