--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/react-helmet": "^6.1.1",
+        "@types/uuid": "^9.0.0",
         "@types/webpack-env": "^1.16.0",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
@@ -140,7 +141,7 @@
         "timers-browserify": "^2.0.12",
         "use-image": "^1.0.7",
         "util": "^0.12.4",
-        "uuidv4": "^6.2.13",
+        "uuid": "^9.0.0",
         "wasm-imagemagick": "^1.2.8",
         "whatwg-fetch": "^3.6.2",
         "xmlbuilder2": "^3.0.2",
