--- a/src/assets/projects/demo-project.json
+++ b/src/assets/projects/demo-project.json
@@ -37,7 +37,7 @@
         "color": [0, 0, 0, 255],
         "layerId": "a3841a1f-4f7a-486b-8eaf-1bfe4f939cb8",
         "palette": "DEFAULT",
-        "stamp": [],
+        "stamp": null,
         "tileId": 1,
         "tool": "DRAG",
         "toolSize": 1
