--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@mui/material": "^5.16.5",
     "@mui/styles": "^5.16.5",
     "@reduxjs/toolkit": "^2.2.6",
+    "buffer": "^6.0.3",
     "file-saver": "^2.0.5",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -48,7 +49,7 @@
     "konva": "^9.3.14",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "mui-color": "^2.0.0-beta.2",
+    "material-ui-color": "^1.2.0",
     "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
@@ -62,11 +63,13 @@
     "redux-saga": "^1.3.0",
     "use-image": "^1.1.1",
     "uuid": "^10.0.0",
-    "wasm-imagemagick": "^1.2.8",
     "whatwg-fetch": "^3.6.20",
-    "xmlbuilder2": "^3.1.1"
+    "xmlbuilder2": "^3.1.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.7",
     "@types/pako": "^2.0.3",
@@ -79,16 +82,15 @@
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "^3.3.3",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.6",
-    "vite-plugin-electron-renderer": "^0.14.5",
-    "vite-plugin-static-copy": "^1.0.6",
-    "vite-plugin-top-level-await": "^1.4.2",
-    "vite-plugin-wasm": "^3.3.0"
+    "vite-plugin-electron-renderer": "^0.14.5"
   },
   "engines": {
     "node": "20.x",
